--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -133,7 +133,7 @@
 				<div class="col s4 offset-s4">
 					<div class="row">
 						<div class="input-field col s12">
-						    <select>
+						    <select v-model="select">
 						      	<option value="1">TRIP LENGTH PER TRIP TYPE</option>
 						      	<option value="2">SEASONAL RIDES</option>
 						      	<option value="3">TRIP LENGTH</option>
