--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -70,7 +70,7 @@
 					          <span class="card-title">Total Trips</span>
 					          <p style="font-size: 28px; text-align: right">132427</p>
 					      	  -->
-					          <p style="font-size: 18px">Distance Traveled</p>
+					          <p style="font-size: 18px">Total Trips</p>
 					          <span class="card-title" style="text-align:right; font-size: 40px">{{total}} trips</span>
 					        </div>
 					        <div class="card-action">
@@ -81,8 +81,8 @@
 					<div class="col s6">
 						<div class="card blue-grey darken-1">
 					        <div class="card-content white-text">
-					          <p style="font-size: 18px">Distance Traveled</p>
-					          <span class="card-title" style="text-align:right; font-size: 40px">{{distance}} miles</span>
+					          <p style="font-size: 18px">Commuters</p>
+					          <span class="card-title" style="text-align:right; font-size: 40px">{{commute}} commuters</span>
 					        </div>
 					        <div class="card-action">
 					        </div>
