charts and reactivity work

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -136,9 +136,10 @@
 					<div class="row">
 						<div class="input-field col s12" id="selector">
 						    <select v-model="selected">
-						      	<option value="0">TRIP LENGTH AND TRIP TYPE</option>
-						      	<option value="1">SEASONAL RIDES</option>
-						      	<option value="2">MONTHLY TRIP LENGTHS</option>
+						    	<option value="0" disabled selected>CHOOSE A GRAPH</option>
+						      	<option value="1">TRIP LENGTH AND TRIP TYPE</option>
+						      	<option value="2">SEASONAL RIDES</option>
+						      	<option value="3">MONTHLY TRIP LENGTHS</option>
 						    </select>
 						    <label>Graph</label>
 						</div>
