--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
-		<!-- GOOGLE CHARTS -->
+		<!-- google charts -->
 		<!--Load the AJAX API-->
     	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     	<script type="text/javascript"src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
 		</script>
 
-		<!-- MATERIALIZE -->
+		<!-- materialize css -->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -33,7 +33,7 @@
 			<div class="row">
 				<h4>Los Angeles Bike Share Usage</h4>
 				
-				<!-- STATISTICS BLURB -->
+				<!-- STATISTICS -->
 				<div id="statistics">
 
 					<!-- first row -->
@@ -41,10 +41,6 @@
 					<div class="col s6">
 						<div class="card blue-grey darken-1">
 					        <div class="card-content white-text">
-					          <!--
-					          <span class="card-title">Total Trips</span>
-					          <p style="font-size: 28px; text-align: right">132427</p>
-					      	  -->
 					          <p style="font-size: 18px">Total Trips</p>
 					          <span class="card-title" style="text-align:right; font-size: 40px">{{total}} trips</span>
 					        </div>
@@ -141,7 +137,7 @@
 		</div>
 		</div>
 
-		<!-- MORE JAVASCRIPT YAY -->
+		<!-- more javascript -->
 		<script src="main.js" type="text/javascript"></script>
 
 	</body>
